テスト用のテンプレート追加

--- a/Kuri.yml
+++ b/Kuri.yml
@@ -10,3 +10,17 @@ interactor:
   ProjectFileName: github.xcodeproj
   GenerateRootPath: ./github/data/
   Target: github
+  ShouldRemoveLayerNameFromDirectory: true
+
+interactorTests:
+  ProjectRootPath: ./
+  ProjectFileName: github.xcodeproj
+  GenerateRootPath: ./github/data/
+  Target: githubTests
+  ShouldRemoveLayerNameFromDirectory: true
+
+presenterTests:
+  ProjectRootPath: ./
+  ProjectFileName: github.xcodeproj
+  GenerateRootPath: ./github/modules/
+  Target: githubTests
